<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_invoice">

    <fragment
        android:id="@+id/nav_invoice"
        android:name="com.example.invoicegenerator.ui.invoice.InvoiceFragment"
        android:label="@string/nav_inv"
        tools:layout="@layout/fragment_invoice" />


    <fragment
        android:id="@+id/nav_estimate"
        android:name="com.example.invoicegenerator.ui.estimate.EstimateFragment"
        android:label="@string/nav_es"
        tools:layout="@layout/fragment_estimate" >
        <action
            android:id="@+id/action_nav_estimate_to_new"
            app:destination="@id/newEstimateFragment" />
        <action
            android:id="@+id/action_nav_estimate_to_estimateLine"
            app:destination="@id/estimateLineFragment" />
    </fragment>

    <fragment
        android:id="@+id/newEstimateFragment"
        android:name="com.example.invoicegenerator.ui.estimate.NewEstimateFragment"
        android:label="@string/nav_new_es"
        tools:layout="@layout/fragment_new_estimate" >
        <action
            android:id="@+id/action_newEstimateFragment_to_select_client"
            app:destination="@id/selectClientFragment" />
        <action
            android:id="@+id/action_newEstimate_to_business"
            app:destination="@id/businessFragment" />
        <argument android:name="id"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/selectClientFragment"
        android:name="com.example.invoicegenerator.ui.estimate.SelectClientFragment"
        android:label="@string/nav_select_client"
        tools:layout="@layout/fragment_select_client" >
        <action
            android:id="@+id/action_selectClient_to_newEstimate"
            app:destination="@id/newEstimateFragment"
            app:popUpTo="@id/newEstimateFragment"
            app:popUpToInclusive="true" />
    </fragment>


    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.invoicegenerator.ui.payment.PaymentFragment"
        android:label="@string/nav_pay"
        tools:layout="@layout/fragment_payment" />


    <fragment
        android:id="@+id/nav_client"
        android:name="com.example.invoicegenerator.ui.client.ClientFragment"
        android:label="@string/nav_cli"
        tools:layout="@layout/fragment_client" >
        <action
            android:id="@+id/action_client_to_new"
            app:destination="@id/newClientFragment" />
        <action
            android:id="@+id/action_client_to_update"
            app:destination="@id/updateClientFragment" />
    </fragment>


    <fragment
        android:id="@+id/newClientFragment"
        android:name="com.example.invoicegenerator.ui.client.NewClientFragment"
        android:label="@string/nav_client_info"
        tools:layout="@layout/fragment_new_client" />


    <fragment
        android:id="@+id/updateClientFragment"
        android:name="com.example.invoicegenerator.ui.client.UpdateClientFragment"
        android:label="@string/nav_client_info"
        tools:layout="@layout/fragment_update_client" >
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>


    <fragment
        android:id="@+id/nav_item"
        android:name="com.example.invoicegenerator.ui.item.ItemFragment"
        android:label="@string/nav_ite"
        tools:layout="@layout/fragment_item" >
        <action
            android:id="@+id/action_item_to_new"
            app:destination="@id/newItemFragment" />
        <action
            android:id="@+id/action_item_to_update"
            app:destination="@id/updateItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/newItemFragment"
        android:name="com.example.invoicegenerator.ui.item.NewItemFragment"
        android:label="@string/nav_new_item"
        tools:layout="@layout/fragment_new_item" />

    <fragment
        android:id="@+id/updateItemFragment"
        android:name="com.example.invoicegenerator.ui.item.UpdateItemFragment"
        android:label="@string/nav_update_item"
        tools:layout="@layout/fragment_update_item" >
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/businessFragment"
        android:name="com.example.invoicegenerator.ui.estimate.BusinessFragment"
        android:label="@string/nav_business"
        tools:layout="@layout/fragment_business"/>
    <fragment
        android:id="@+id/estimateLineFragment"
        android:name="com.example.invoicegenerator.ui.estimate_line.EstimateLineFragment"
        android:label="@string/nav_estimate_line"
        tools:layout="@layout/fragment_estimate_line" >
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>


</navigation>