<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="6dp"
    android:padding="12dp"
    android:id="@+id/listL">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spItem"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:layout_weight="3" />


        <EditText
            android:id="@+id/edQty"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:hint="@string/hint_qty"
            android:gravity="center"
            style="@style/edt"/>


        <EditText
            android:id="@+id/edPrice"
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:hint="@string/hint_prc"
            android:gravity="center"
            style="@style/edt"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/rmView"
            style="@style/Theme.InvoiceGenerator.smallBtnAdd"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/baseline_close_24"
            android:contentDescription="@string/rm"/>


    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_uom"
            android:textColor="@color/cardview_shadow_start_color"
            android:text="@string/hintItemUom"
            android:textSize="14sp"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/tv_des"
            android:text="@string/app_name"
            android:textColor="@color/cardview_shadow_start_color"
            android:textSize="14sp"
            android:layout_weight="1"/>

    </TableRow>

</LinearLayout>