<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfItemName"
        style="@style/txtField"
        android:hint="@string/hintItemName"
        app:counterMaxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>


    <AutoCompleteTextView
        android:id="@+id/auto_text_uom"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/hintItemUom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfItemName" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfDes"
        style="@style/txtField"
        android:hint="@string/hintItemDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auto_text_uom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfDes">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfBaseCost"
            style="@style/txtField"
            android:layout_weight="1"
            android:hint="@string/hintBaseCost"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />


        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>